@@ -1,7 +1,7 @@
 === MyKnowledgeBase ===
 Contributors: Guido07111975
 Donate link: https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=donation%40guidovanderleest%2enl
-Version: 5.0
+Version: 5.1
 Requires at least: 4.2
 Tested up to: 4.7
 License: GNU General Public License v3 or later
@@ -44,7 +44,7 @@ The knowledgebase uses the default WordPress categories and posts.
 
 Create a new page and select the knowledgebase page template. You can choose between 3 columns (with sidebar) and 4 columns (without sidebar).
 
-Show or hide page title, exclude a category, set amount of posts for each category and order posts by date or name via WordPress Dashboard > Appearance > Customize.
+Show or hide page title and category description, exclude a category, set amount of posts for each category and order posts by date or name via WordPress Dashboard > Appearance > Customize.
 
 Parent and subcategories are listed the same way.
 
