@@ -1,6 +1,12 @@
 CHANGELOG
 =========
 
+MyKnowledgeBase version 5.1 - april 2017
+- file single: added post class .post-single
+- file style: changed margin and padding of several elements (layout improvement)
+- both knowledgebase files: updated category and post query
+- customizer: show or hide category description on knowledgebase page
+
 MyKnowledgeBase version 5.0 - march 2017
 - file style: changed margin of several elements to avoid margin collapsing
 - cleaned up file style
